// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.frontend.api.v1;

option java_outer_classname = "ErrorCountProto";
option java_package = "com.google.aggregate.protos.frontend.api.v1";

/** Count of errors per a given category */
message ErrorCount {
  /** The category of the error. */
  string category = 1;
  /** The count of errors in the specified category. */
  int32 count = 2;
  /** Description of the error. */
  string description = 3;
}
